--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ google_analytics:
   pv: false
 
 disqus:
-  shortname: 'disqus_tZRqN9GbJu'   # Change to your Disqus shortname.
+  shortname: 'LucyLiu'   # Change to your Disqus shortname.
   comments: true        # boolean type, the gobal switch of posts' comments.
 
 # The year your website was first run.
