--- a/.container/_config.yml
+++ b/.container/_config.yml
@@ -34,7 +34,7 @@ social:
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
 
-google_site_verification: google_meta_tag_verification # change to your verification string
+google_site_verification: google8f7e9a5c461b1c7e.html # change to your verification string
 
 #--------------------------
 
@@ -49,7 +49,7 @@ google_analytics:
   pv: false
 
 disqus:
-  shortname: 'disqus_tZRqN9GbJu'   # Change to your Disqus shortname.
+  shortname: 'LucyLiu'   # Change to your Disqus shortname.
   comments: true        # boolean type, the gobal switch of posts' comments.
 
 # The year your website was first run.
