--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ social:
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
 
-google_site_verification: google_meta_tag_verification # change to your verification string
+google_site_verification: google8f7e9a5c461b1c7e.html # change to your verification string
 
 #--------------------------
 
