--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ social:
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
 
-google_site_verification: google8f7e9a5c461b1c7e # change to your verification string
+google_site_verification: 828U5Odxo38lGZ7ca6xyIc_r3oCovf3Xsr-XyShs3Ek # change to your verification string
 
 #--------------------------
 
